--- a/app.json
+++ b/app.json
@@ -1,14 +1,13 @@
 {
-  "name": "NekoMenfess",
-  "description": "mengirim pesan ke channel telegram secara anonymous",
+  "name": "File Sharing Man",
+  "description": "BOT Multi Force Subs File Sharing Bot berguna untuk menyimpan file dan dapat diakses melalui link khusus",
+  "stack": "heroku-22",
   "keywords": [
     "telegram",
-    "menfess",
-    "fwb"
-
+    "file",
+    "sharing"
   ],
-  "repository": "https://github.com/nekolocal/nekomenfess/tree/main",
-  "logo": "https://telegra.ph/file/2d46007dd7d22645c4ec3.jpg",
+  "logo": "https://telegra.ph/file/9dc4e335feaaf6a214818.jpg",
   "env": {
     "BOT_TOKEN": {
       "description": "Masukkan token bot kamu, didapatkan dari @Botfather",
