--- a/app.json
+++ b/app.json
@@ -147,11 +147,6 @@
       "value": "{mention}, pesan mu gagal terkirim silahkan gunakan hastag:\n\n#NekoBoy / #NekoGirl untuk Mencari Pasangan, Teman , Partner dll\n#NekoAsk untuk Bertanya\n#NekoStory untuk Berbagi Cerita\n#NekoSpill untuk Spill Masalah\n#NekoFind untuk Mencari Pasangan, Teman, Partner dll"
     }
   },
-  "buildpacks": [
-    {
-      "url": "heroku/python"
-    }
-  ],
   "addons": [
     {
       "plan": "heroku-postgresql",
@@ -161,7 +156,7 @@
     }
   ],
   "formation": {
-    "worker": {
+    "web": {
       "quantity": 1,
       "size": "eco"
     }
